* Fix bug in reinstall which removed the composables from kupu.
  [ree]

* Added compopack_template_azax layer to the skins which gets added in the
  correct order, in case azax is installed.
  [jslob]

* Removed the ++resource++ code from the layout templates which were generating
  at least 4 404's per request.
  [jladage]

* Added ResourceRegistry config for all js and css. Moved the skins files
  to a few skindirs as done in the azax-ree branch. And off course add
  GenericSetup profiles for the js and css.
  [jladage]

* Fixed the renaming issue by inheriting from BaseFolder and implement the
  INonStructuralFolder interface.
  [jladage and jorisslob]

* Added GenericSetup base profile for configuring the composite_tool. You can
  now import and export the entire configuration in XML.
  [jladage and jorisslob]

* changed tool.py to handle multiple users messing with the same 
  navigation page. Some sanity checks were added and neat error messages
  will be sent to users when things go wrong
  [jslob and maurits]

* fix css to do better layer handling (position: relative was elements to
  be rendered over the plone drop down menus)
  [jslob and mteulingen]

* Play nice with Plone 2.1 by adding navigation page to the list of default
  page types in site_properties.
  [jladage]

* set better layout and viewlet as default for navigation page
  [gotcha]

* styling and i18n
  [gotcha]

* setup portal factory and id calculated from title for Plone 2.1
  [gotcha]
 
* register cleanIndexes setup widget in portal_migration to remove wrongly
  indexed software.
  [gotcha]

* fix indexing : software elements like layout registry, viewlet registry,
  layouts, viewlets, composite container and elements are not indexed
  anymore.
  [gotcha]

* fix SearchableText at creation time
  [gotcha]

* fix package so that it can load when ATContentTypes is not installed
  [gotcha]
