@@ -1,3 +1,14 @@
+* Added the topic view to the profile, since that was allready expected
+  in the tests. All tests are passing again.
+  [jladage]
+
+* Bugfix roundtrip import/export didn't work correctly because of
+  the use of different filenames. The export creates a composite_tool.xml
+  and the import expected compositetool.xml. Thanks to Tres Seaver for
+  reporting this bug and providing a patch. A deprecation warning will be
+  logged in case compositetool.xml is still used in existing profiles
+  [jladage]
+
 * Fix bug in reinstall which removed the composables from kupu.
   [ree]
 
